--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -393,6 +393,7 @@
                                 <property name="editable">False</property>
                                 <property name="left_margin">2</property>
                                 <property name="right_margin">2</property>
+                                <property name="cursor_visible">False</property>
                                 <property name="show_line_numbers">True</property>
                                 <property name="tab_width">4</property>
                                 <property name="auto_indent">True</property>
