--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -345,7 +345,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkNotebook" id="tabs">
+                  <object class="GtkNotebook" id="instructions_data_notebook">
                     <property name="height_request">400</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
